--- a/c1hack/app/src/main/res/layout/activity_main.xml
+++ b/c1hack/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,6 @@
     android:orientation="vertical"
     tools:context="com.example.yl.c1_hack.MainActivity">
 
-    <Button
-        android:id="@+id/task_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tasks"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,5 +15,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/task_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tasks"/>
+
+    <Button
+        android:id="@+id/rewards_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Rewards"/>
+
+    <!-- Future implementation -->
+    <Button
+        android:id="@+id/acct_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Manage Child Account(s)"/>
 
 </android.widget.LinearLayout>
