--- a/c1hack/app/src/main/res/layout/activity_rewards.xml
+++ b/c1hack/app/src/main/res/layout/activity_rewards.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.yl.c1_hack.TaskSetupActivity">
+    tools:context="com.example.yl.c1_hack.RewardsActivity">
 
     <Button
         android:id="@+id/home_button"
