--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,13 @@
         android:id="@+id/task_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tasks"/>
+        android:text="Task List"/>
 
     <Button
         android:id="@+id/rewards_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rewards"/>
+        android:text="Reward Setup"/>
 
     <!-- Future implementation -->
     <Button
