--- a/app/src/main/res/layout/activity_task_setup.xml
+++ b/app/src/main/res/layout/activity_task_setup.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context="com.example.yl.c1_hack.TaskSetupActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_task"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <Button
         android:id="@+id/create_button"
         android:layout_width="match_parent"
