--- a/app/src/main/res/layout/activity_task_setup.xml
+++ b/app/src/main/res/layout/activity_task_setup.xml
@@ -7,17 +7,16 @@
     android:orientation="vertical"
     tools:context="com.example.yl.c1_hack.TaskSetupActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_task"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
     <Button
         android:id="@+id/create_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Create New Task"/>
+
+    <ListView
+    android:id="@+id/list_task"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/home_button"
