restructured add button

--- a/app/src/main/res/layout/activity_task_setup.xml
+++ b/app/src/main/res/layout/activity_task_setup.xml
@@ -7,11 +7,11 @@
     android:orientation="vertical"
     tools:context="com.example.yl.c1_hack.TaskSetupActivity">
 
-    <Button
+    <!--<Button
         android:id="@+id/create_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create New Task"/>
+        android:text="Create New Task"/>-->
 
     <ListView
     android:id="@+id/list_task"
