trying to make it so no duplicates now only new ones are added twice

--- a/app/src/main/res/layout/activity_task_setup.xml
+++ b/app/src/main/res/layout/activity_task_setup.xml
@@ -22,6 +22,6 @@
         android:id="@+id/home_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Back"/>
+        android:text="Home"/>
 
 </android.widget.LinearLayout>
