--- a/app/src/main/res/layout/child_overview.xml
+++ b/app/src/main/res/layout/child_overview.xml
@@ -23,5 +23,5 @@
         android:id="@+id/Child_Task"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Task Lists"/>
+        android:text="Task List"/>
 </android.widget.LinearLayout>
