--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -30,8 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/task_edit"
         android:layout_alignBottom="@+id/task_edit"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/task_edit"
         android:onClick="completeTask"
         android:text="Mark as Complete" />
 
@@ -41,8 +40,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/task_complete"
         android:layout_alignBottom="@+id/task_complete"
-        android:layout_marginStart="11dp"
-        android:layout_toEndOf="@+id/task_complete"
+        android:layout_marginEnd="11dp"
+        android:layout_toRightOf="@+id/task_complete"
         android:layout_alignParentRight="true"
         android:text="Delete" />
 
